<resources>
    <string name="app_name">Easy Loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_flexible_and_innovative_than_a_bank">More Flexible And Innovative\n       than a Bank</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="passsword">Passsword</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="address">Address</string>
    <string name="upload_nid">Upload Nid</string>
    <string name="upload_nid2">Upload NID</string>
    <string name="i_agree_to_the_terms_conditions_and_policy"><![CDATA[I agree to the Terms & Conditions and Policy.]]></string>
    <string name="verify_now">Verify Now</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="loans">Loans</string>
    <string name="transaction">Transaction</string>
</resources>