<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LandingFragment"
    android:background="@color/white"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/animation_view"
        app:lottie_rawRes="@raw/loannow"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"


        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_flexible_and_innovative_than_a_bank"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        />
<com.google.android.material.button.MaterialButton
    android:id="@+id/sign_in_button"
    android:layout_width="379dp"
    android:layout_height="56dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.67"
    android:text="@string/sign_in"
    app:backgroundTint="#575DFB"
    />
    <Button

        android:id="@+id/registerButton"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.77"
        />




</androidx.constraintlayout.widget.ConstraintLayout>